<resources>
    <string name="app_name">ACN4AV_Jeronimo_Lago</string>
    <string name="eslogan_app">  Conectando concesionarias, impulsando ventas</string>
    <string name="concesionarias">Concesionarias</string>
    <string name="concesionaria_detail">Concesionaria:</string>
    <string name="btn_add_concesionaria_text">Agregar Concesionaria</string>
    <string name="edit_concesionaria_text">Editar Concesionaria</string>
    <string name="btn_remove_concesionaria_text">Eliminar Concesionaria</string>
    <string name="btn_add_auto_text">Agregar Auto</string>
    <string name="edit_auto_text">Editar Auto</string>
    <string name="btn_remove_auto_text">Eliminar Auto</string>
    <string name="btn_ver_ubicacion_text">Ver Ubicación en Mapa</string>
    <string name="btn_volver_atras_text">Volver Atrás</string>
    <string name="label_username">Nombre de Usuario:</string>
    <string name="label_password">Contraseña:</string>
    <string name="label_nombre">Nombre:</string>
    <string name="label_ciudad">Ciudad:</string>
    <string name="label_calle">Calle:</string>
    <string name="label_numero">Número:</string>
    <string name="hint_txt_nombre">Ingresa el nombre de la concesionaria:</string>
    <string name="hint_txt_ciudad">Ingresa tu nombre de la ciudad:</string>
    <string name="hint_txt_direccion">Ingresa la calle:</string>
    <string name="hint_txt_numero">Ingresa el numero:</string>
    <string name="label_registro">Registrarse</string>
    <string name="label_modelo">Modelo:</string>
    <string name="label_precio">Precio:</string>
    <string name="label_anio">Año:</string>
    <string name="label_color">Color:</string>
    <string name="label_marca">Marca:</string>
    <string name="hint_txt_modelo">Ingresa el modelo:</string>
    <string name="hint_txt_precio">Ingresa el precio:</string>
    <string name="hint_txt_anio">Ingresa el año:</string>
    <string name="hint_txt_color">Ingresa el color</string>
    <string name="hint_txt_nombre_usuario">Ingresa tu nombre</string>
    <string name="hint_txt_apellido_usuario">Ingresa tu apellido</string>
    <string name="label_nombre_usuario">Nombre:</string>
    <string name="label_apellido_usuario">Apellido:</string>
    <string name="label_email_usuario">Email:</string>
    <string name="label_password_usuario">Contraseña:</string>
    <string name="label_confirm_password_usuario">Confirma tu contraseña::</string>
    <string name="hint_txt_email_usuario">Ingresa tu email</string>
    <string name="hint_txt_confirm_password">Confirma tu contraseña</string>
    <string name="txt_btn_registrarse">Registrarme</string>
    <string name="tv_go_to_register_form">Aun no tienes una cuenta? haz click aqui para registrarte</string>


    <string name="hint_txt_username">Ingresa tu nombre de usuario</string>
    <string name="hint_txt_password">Ingresa tu contraseña</string>
    <string name="text_btn_iniciar_sesion">Iniciar Sesión</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>