<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ConcesionariasActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="435dp"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/autonexus_logo" />

    <Button
        android:id="@+id/btnAgregarConcesionaria"
        android:layout_width="160dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="132dp"
        android:text="@string/btn_add_concesionaria_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnAgregarConcesionaria3"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/btn_volver_atras_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/lato_bold_italic"
        android:text="@string/concesionarias"
        android:textColor="@color/black"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnEliminarConsecionaria"
        android:layout_width="160dp"
        android:layout_height="58dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="132dp"
        android:text="@string/btn_remove_concesionaria_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="359dp"
        android:layout_height="399dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@android:layout/list_content" />

</androidx.constraintlayout.widget.ConstraintLayout>