<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FormAutoActivity"
    tools:layout_editor_absoluteX="4dp"
    tools:layout_editor_absoluteY="71dp">

    <Button
        android:id="@+id/btnSubmitFormAuto"
        android:layout_width="228dp"
        android:layout_height="61dp"
        android:layout_marginBottom="16dp"
        android:autoText="false"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:text="@string/btn_add_auto_text"
        android:textColor="@color/white"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/black" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="435dp"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/autonexus_logo" />

    <TextView
        android:id="@+id/txtFormRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="548dp"
        android:fontFamily="@font/lato_bold_italic"
        android:text="@string/btn_add_auto_text"
        android:textColor="@color/black"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="317dp"
        android:layout_height="58dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFormRegister"
        android:entries="@array/spinner_items"
        />

    <EditText
        android:id="@+id/etCarColor"
        android:layout_width="317dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:hint="@string/hint_txt_nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEslogan" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/label_color"
        app:layout_constraintBottom_toTopOf="@+id/etCarColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etCarYear"
        android:layout_width="317dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="180dp"
        android:ems="10"
        android:hint="@string/hint_txt_nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEslogan" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/label_anio"
        app:layout_constraintBottom_toTopOf="@+id/etCarYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etCarPrice"
        android:layout_width="317dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="276dp"
        android:ems="10"
        android:hint="@string/hint_txt_nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEslogan" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/label_precio"
        app:layout_constraintBottom_toTopOf="@+id/etCarPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etCarModel"
        android:layout_width="317dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="368dp"
        android:ems="10"
        android:hint="@string/hint_txt_nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEslogan" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/label_modelo"
        app:layout_constraintBottom_toTopOf="@+id/etCarModel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/label_marca"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner" />
</androidx.constraintlayout.widget.ConstraintLayout>